Resource title is overlapped on Add Tags button under info tab in search issue Resolved.

--- a/src/main/java/org/ednovo/gooru/client/mvp/search/searchInfo.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/search/searchInfo.css
@@ -38,6 +38,7 @@
 
 .resource-image {
 	float: left;
+	margin-top:2px;
 }
 
 .resource-info-title {
@@ -479,6 +480,8 @@
 .labelTitle {
 	font-weight: bold;
 	color: black;
+	width:410px;
+	margin-top:-3px;
 }
 
 .loadingImageMainDivShare {
@@ -503,9 +506,9 @@
 .btnGreen {
 	float: right;
 	margin-right: 12px;
-	margin-top: -24px;
 	background-color: #4E9746;
 	padding: 5px;
 	border-radius: 4px;
 	color: white;
+	margin-top:-33px;
 }
